--- a/video-making.html
+++ b/video-making.html
@@ -184,13 +184,13 @@
                                                 <!-- 제목, 선택한 레이아웃 비율, 자막 컨텐츠 -->
                                                 <div class="mockup-content">
                                                     <div class="mock-title mockup-content-item">
-                                                        <img class="titleImg" src="img/template/example-title.svg" alt="레이아웃 예시 타이틀">
+                                                        <img class="titleImg" src="img/template/example-title.svg" alt="제목 예시 이미지">
                                                     </div>
                                                     <div class="mock-ratio mockup-content-item">
-                                                        <img class="exampleImg ratio16-item" src="img/template/example-img-16_9.png" alt="레이아웃 예시 이미지">
+                                                        <img class="exampleImg ratio16-item" src="img/template/example-img-16_9.png" alt="영상 예시 이미지">
                                                     </div>
-                                                    <div class="mock-subTitle mockup-content-item">
-                                                        <img class="sub-titleImg" src="img/template/example-subtitle.svg" alt="레이아웃 예시 타이틀">
+                                                    <div class="mock-subTitle mockup-content-item bottom-subTitle">
+                                                        <img class="sub-titleImg" src="img/template/example-subtitle.svg" alt="자막 예시 이미지">
                                                     </div>
                                                 </div>
                                             </div>
