--- a/video-edit1.html
+++ b/video-edit1.html
@@ -671,7 +671,7 @@
         
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            //--- 자막 효과 버튼 클릭시 포커스 효과
+            //--- 자막 
             document.querySelectorAll(".effectBtn").forEach((button) => {
                 button.addEventListener("click", (event) => {
                     // 모든 버튼에서 b-show 제거
@@ -683,7 +683,8 @@
                     event.currentTarget.classList.add("b-show");
                 });
             });
-            //--- 자막 편집
+
+            // 자막 편집
             const wordWrap = document.querySelector(".word-wrap");
             const editMenu = document.querySelector(".edit-menu");
             const colorPicker = document.getElementById("color-picker");
@@ -695,12 +696,10 @@
                 if (event.target.classList.contains("word")) {
                     if (selectedWord) {
                         selectedWord.classList.remove("selected");
-                        selectedWord.style.borderBottom = "none"; // 기존 효과 제거
                     }
 
                     selectedWord = event.target;
                     selectedWord.classList.add("selected");
-                    selectedWord.style.borderBottom = "2px solid #523baf"; // 포커스 효과 추가
 
                     // 선택된 단어의 현재 색상을 컬러 선택기에 반영
                     let currentColor = window.getComputedStyle(selectedWord).color;
@@ -708,10 +707,20 @@
 
                     // 편집 메뉴 위치 조정
                     const rect = selectedWord.getBoundingClientRect();
-                    editMenu.style.display = "flex";
+                    editMenu.classList.add("show-edit-menu");
                     editMenu.style.top = `${window.scrollY + rect.bottom + 4}px`;
                     editMenu.style.left = `${window.scrollX + rect.left}px`;
                 }
+            });
+
+            // 컬러칩 클릭 시 색상 변경
+            document.querySelectorAll(".color-chip").forEach((chip) => {
+                chip.addEventListener("click", (event) => {
+                    if (selectedWord) {
+                        const color = window.getComputedStyle(event.target).backgroundColor; // 칩 색상 가져오기
+                        selectedWord.style.color = color; // 선택된 단어 색상 변경
+                    }
+                });
             });
 
             // 편집 버튼 클릭 시 내용 수정 가능하도록 설정
@@ -731,9 +740,8 @@
                     event.preventDefault(); // 문단 나눠지는 기본 동작 방지
                     selectedWord.contentEditable = false;
                     selectedWord.classList.remove("selected");
-                    selectedWord.style.borderBottom = "none"; // 포커스 효과 제거
                     selectedWord.removeEventListener("keydown", handleEnterKey); // 이벤트 제거
-                    editMenu.style.display = "none"; // 편집 메뉴 숨기기
+                    editMenu.classList.remove("show-edit-menu"); // 편집 메뉴 숨기기
                 }
             }
 
@@ -741,15 +749,8 @@
             document.querySelector(".delete").addEventListener("click", () => {
                 if (selectedWord) {
                     selectedWord.remove();
-                    editMenu.style.display = "none";
+                    editMenu.classList.remove("show-edit-menu"); // 편집 메뉴 숨기기
                     selectedWord = null;
-                }
-            });
-
-            // 컬러 선택 후 적용
-            colorPicker.addEventListener("input", () => {
-                if (selectedWord) {
-                    selectedWord.style.color = colorPicker.value;
                 }
             });
 
@@ -762,7 +763,7 @@
                         selectedWord.style.borderBottom = "none"; // 포커스 효과 제거
                         selectedWord.removeEventListener("keydown", handleEnterKey); // 이벤트 제거
                     }
-                    editMenu.style.display = "none";
+                    editMenu.classList.remove("show-edit-menu"); // 편집 메뉴 숨기기
                 }
             });
 
@@ -771,6 +772,7 @@
                 const rgbArray = rgb.match(/\d+/g).map(Number);
                 return `#${rgbArray.map(x => x.toString(16).padStart(2, "0")).join("")}`;
             }
+
 
 
 
@@ -815,12 +817,12 @@
                 });
             });
 
-// 다른 곳을 클릭하면 모든 드롭다운 닫기
-document.addEventListener("click", () => {
-    document.querySelectorAll(".select").forEach((dropdown) => {
-        dropdown.classList.add("selectNone");
-    });
-});
+            // 다른 곳을 클릭하면 모든 드롭다운 닫기
+            document.addEventListener("click", () => {
+                document.querySelectorAll(".select").forEach((dropdown) => {
+                    dropdown.classList.add("selectNone");
+                });
+            });
 
 
 
