--- a/video-edit1.html
+++ b/video-edit1.html
@@ -181,16 +181,16 @@
                             <!-- 탭 -->
                             <ul class="tab-view video-tab m-top40">
                                 <li class="tab-active tab-item">
-                                    <a href="#" class="tab-active">자막 스타일</a>
+                                    <a href="video-edit1.html" class="tab-active">자막 스타일</a>
                                 </li>
                                 <li class="tab-disb tab-item">
-                                    <a href="#" class="tab-link">제목 스타일</a>
+                                    <a href="video-edit2.html" class="tab-link">제목 스타일</a>
                                 </li>
                                 <li class="tab-disb tab-item">
-                                    <a href="#" class="tab-link">레이아웃 스타일</a>
+                                    <a href="video-edit3.html" class="tab-link">레이아웃 스타일</a>
                                 </li>
                                 <li class="tab-disb tab-item">
-                                    <a href="#" class="tab-link">스타일 업로드</a>
+                                    <a href="video-edit4.html" class="tab-link">스타일 업로드</a>
                                 </li> 
                             </ul>
 
