--- a/video-making.html
+++ b/video-making.html
@@ -161,16 +161,16 @@
                             <!-- 탭 -->
                             <ul class="tab-view video-tab">
                                 <li class="tab-active tab-item">
-                                    <a href="#" class="tab-active">레이아웃</a>
+                                    <a href="video-making.html" class="tab-active">레이아웃</a>
                                 </li>
                                 <li class="tab-disb tab-item">
-                                    <a href="#" class="tab-link">레이아웃 스타일</a>
+                                    <a href="video-edit3.html" class="tab-link">레이아웃 스타일</a>
                                 </li>
                                 <li class="tab-disb tab-item">
-                                    <a href="#" class="tab-link">제목 스타일</a>
+                                    <a href="video-edit2.html" class="tab-link">제목 스타일</a>
                                 </li>
                                 <li class="tab-disb tab-item">
-                                    <a href="#" class="tab-link">자막 스타일</a>
+                                    <a href="video-edit1.html" class="tab-link">자막 스타일</a>
                                 </li> 
                             </ul>
 
